# dropwatch

./: .gitignore  0001-Fix-ubuntu-build.patch  Cargo.toml  Dockerfile  Makefile  README.md  dropwatch.bpf.c  dropwatch.c  dropwatch.h  dropwatch.skel.h  kubernetes.yaml  vmlinux.h
.github/workflows/: build.yml  check.yml
kubernetes/: kubernetes.yaml
src/: main.rs
src/bpf/: dropwatch.bpf.c  dropwatch.skel.rs  mod.rs
